--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
 		"inlineSourceMap": true,
 		"declaration": true,
 		"noImplicitAny": true,
-		"target": "es6",
-		"module": "es6",
-		"outDir": "dist/es6",
+		"target": "es5",
+		"module": "commonjs",
+		"outDir": "dist/es5",
+		"noLib": false,
 		"rootDir": "src",
 		"newLine": "LF"
 	},
