--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Super-simple signals class",
   "main": "dist/es5/SimpleSignal.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc --pretty",
+    "test": "node tests/test",
+    "lint": "tslint -c tslint.json src/*.ts",
+    "build": "npm run lint && npm run tsc"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,8 @@
   },
   "homepage": "https://github.com/zeh/simplesignal#readme",
   "devDependencies": {
+    "tape": "^4.5.1",
+    "tslint": "^3.3.0",
     "typescript": "^1.8.9"
   }
 }
