--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"removeComments": false,
 		"preserveConstEnums": true,
 		"inlineSourceMap": true,
-		"declaration": true,
+		"declaration": false,
 		"noImplicitAny": true,
 		"target": "es5",
 		"module": "commonjs",
