--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,24 @@
 {
 	"compilerOptions": {
 		"diagnostics": true,
+		"module": "commonjs",
+		"target": "es5",
+		"lib": ["dom", "es2015", "es2016", "es2017"],
+		"sourceMap": true,
+		"declaration": true,
+		"strictNullChecks": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noImplicitUseStrict": true,
+		"noUnusedLocals": true,
 		"removeComments": false,
 		"preserveConstEnums": true,
-		"inlineSourceMap": true,
-		"declaration": false,
-		"noImplicitAny": true,
-		"target": "es5",
-		"module": "commonjs",
-		"outDir": "dist/es5",
-		"noLib": false,
 		"rootDir": "src",
 		"newLine": "LF"
 	},
-	"files": [
-		"src/SimpleSignal.ts"
+	"exclude": [
+		"node_modules"
 	]
 }
