--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Super-simple signals class",
   "main": "dist/simplesignal.js",
   "scripts": {
-    "test": "node tests/test",
     "build": "webpack",
+    "coverage": "nyc npm test",
+    "test": "mocha test/.setup.js test/**/*-test-*.js",
+    "test:watch": "mocha -w test/.setup.js test/**/*-test-*.js",
     "lint": "tslint -c tslint.json src/*.ts",
     "prepublish": "webpack --debug; webpack -p"
   },
@@ -30,7 +32,6 @@
   },
   "homepage": "https://github.com/zeh/simplesignal#readme",
   "devDependencies": {
-    "tape": "^4.5.1",
     "ava": "^0.16.0",
     "babel": "^6.5.2",
     "babel-core": "^6.18.2",
@@ -40,6 +41,12 @@
     "babel-preset-stage-2": "^6.18.0",
     "chai": "^3.5.0",
     "change-case": "^3.0.0",
+    "core-js": "^2.4.1",
+    "coveralls": "^2.11.11",
+    "cross-env": "^3.1.3",
+    "mocha": "^3.1.2",
+    "nyc": "^9.0.1",
+    "rimraf": "^2.5.3",
     "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-commonjs": "^5.0.5",
