--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-    "editor.insertSpaces": false,
-
-    "files.exclude": {
+	"editor.insertSpaces": false,
+	"files.exclude": {
 		"node_modules": true,
-        "**/.git": true,
-        "**/.DS_Store": true
-    },
-
-    "files.trimTrailingWhitespace": true
+		"**/.git": true,
+		"**/.DS_Store": true
+	},
+	"files.trimTrailingWhitespace": true,
+	"typescript.tsdk": "./node_modules/typescript/lib"
 }
