--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,21 @@
 {
 	"compilerOptions": {
 		"diagnostics": true,
-		"module": "commonjs",
+		"module": "es2015",
 		"target": "es5",
 		"lib": ["dom", "es2015", "es2016", "es2017"],
-		"sourceMap": true,
+		"inlineSourceMap": true,
 		"declaration": true,
-		"strictNullChecks": true,
-		"noFallthroughCasesInSwitch": true,
-		"noImplicitAny": true,
-		"noImplicitReturns": true,
-		"noImplicitThis": true,
-		"noImplicitUseStrict": true,
-		"noUnusedLocals": true,
 		"removeComments": false,
 		"preserveConstEnums": true,
 		"rootDir": "src",
-		"newLine": "LF"
+		"newLine": "LF",
+		"strict": true,
+		"outDir": "dist"
 	},
+	"files": [
+		"src/SimpleSignal.ts"
+	],
 	"exclude": [
 		"node_modules"
 	]
