--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "homepage": "https://github.com/zeh/simplesignal#readme",
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.18.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "core-js": "^2.4.1",
     "coveralls": "^2.11.15",
