--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "simplesignal",
   "version": "2.1.7",
   "description": "Super-simple signals class",
-  "main": "./dist/SimpleSignal.js",
+  "main": "./dist/SimpleSignal.commonjs.js",
+  "module": "./dist/SimpleSignal.js",
   "types": "./dist/SimpleSignal.d.ts",
   "scripts": {
-    "compile": "tsc",
-    "build": "cross-env NODE_ENV=production ./node_modules/webpack/bin/webpack.js --config webpack.config.js --progress --verbose --colors --display-error-details",
-    "dev": "webpack --config webpack.config.js --progress --verbose --colors --display-error-details",
+    "compile:es2015": "tsc",
+    "compile:cjs": "rollup -c",
+    "build": "rimraf dist && npm run compile:es2015 && npm run compile:cjs",
     "coverage": "nyc npm test",
     "coverage:report": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "test": "mocha test/.setup.js test/**/*-test-*.js",
@@ -46,6 +47,7 @@
     "mocha-lcov-reporter": "^1.2.0",
     "nyc": "^10.0.0",
     "rimraf": "^2.5.4",
+    "rollup": "^0.41.6",
     "tslint": "^5.2.0",
     "typescript": "^2.3.2"
   },
