--- a/package.json
+++ b/package.json
@@ -1,64 +1,52 @@
 {
-  "name": "simplesignal",
-  "version": "3.1.0",
-  "description": "Super-simple signals class",
-  "main": "./dist/SimpleSignal.commonjs.js",
-  "module": "./dist/SimpleSignal.js",
-  "types": "./dist/SimpleSignal.d.ts",
-  "scripts": {
-    "compile:es2015": "tsc",
-    "compile:cjs": "rollup -c",
-    "build": "rimraf dist && npm run compile:es2015 && npm run compile:cjs",
-    "coverage": "nyc npm test",
-    "coverage:report": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "test": "mocha test/.setup.js test/**/*-test-*.js",
-    "test:watch": "mocha -w test/.setup.js test/**/*-test-*.js",
-    "lint": "tslint -c tslint.json src/*.ts",
-    "prepublish": "npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zeh/simplesignal.git"
-  },
-  "keywords": [
-    "signals",
-    "events",
-    "callbacks",
-    "minimal",
-    "small",
-    "simple",
-    "tiny",
-    "typescript"
-  ],
-  "author": "Zeh Fernando <npm@zehfernando.com> http://zehfernando.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/zeh/simplesignal/issues"
-  },
-  "homepage": "https://github.com/zeh/simplesignal#readme",
-  "devDependencies": {
-    "babel-plugin-external-helpers": "^6.18.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "chai": "^3.5.0",
-    "core-js": "^2.4.1",
-    "coveralls": "^2.11.15",
-    "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.2.0",
-    "nyc": "^10.0.0",
-    "rimraf": "^2.5.4",
-    "rollup": "^0.41.6",
-    "tslint": "^5.2.0",
-    "typescript": "^2.3.2"
-  },
-  "importSort": {
-    ".js, .jsx, .es6, .es": {
-      "parser": "babylon",
-      "style": "module"
-    },
-    ".ts, .tsx": {
-      "parser": "typescript",
-      "style": "module"
-    }
-  }
+	"name": "simplesignal",
+	"version": "3.1.0",
+	"description": "Super-simple signals class",
+	"main": "./dist/SimpleSignal.umd.js",
+	"module": "./dist/SimpleSignal.es.js",
+	"types": "./src/SimpleSignal.d.ts",
+	"scripts": {
+		"build": "rimraf dist && rollup -c",
+		"build:declarations": "tsc -d",
+		"test": "jest --testMatch **/test/**/*-test-*.js",
+		"test:coverage": "npm run test -- --coverage",
+		"test:coverage:coveralls": "npm run test -- --coverage --coverageReporters=text-lcov | coveralls",
+		"test:watch": "npm run test -- --watchAll",
+		"lint": "tslint -c tslint.json src/*.ts",
+		"prepublish": "npm run build && npm run build:declarations"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/zeh/simplesignal.git"
+	},
+	"keywords": [
+		"signals",
+		"events",
+		"callbacks",
+		"minimal",
+		"small",
+		"simple",
+		"tiny",
+		"typescript"
+	],
+	"author": "Zeh Fernando <npm@zehfernando.com> http://zehfernando.com",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/zeh/simplesignal/issues"
+	},
+	"homepage": "https://github.com/zeh/simplesignal#readme",
+	"devDependencies": {
+		"@babel/core": "^7.2.0",
+		"@babel/preset-env": "^7.2.0",
+		"babel-core": "^7.0.0-bridge.0",
+		"babel-jest": "^23.6.0",
+		"coveralls": "^3.0.2",
+		"jest": "^23.6.0",
+		"regenerator-runtime": "^0.13.1",
+		"rimraf": "^2.5.4",
+		"rollup": "^0.67.4",
+		"rollup-plugin-typescript": "^1.0.0",
+		"tslint": "^5.2.0",
+		"typescript": "^3.2.2"
+	}
 }
