--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,17 @@
 {
 	"compilerOptions": {
 		"diagnostics": true,
-		"module": "es2015",
+		"module": "es6",
 		"target": "es5",
 		"lib": ["dom", "es2015", "es2016", "es2017"],
-		"inlineSourceMap": true,
 		"declaration": true,
-		"removeComments": false,
-		"preserveConstEnums": true,
-		"rootDir": "src",
-		"newLine": "LF",
 		"strict": true,
-		"outDir": "dist"
+		"removeComments": false,
+		"newLine": "LF"
 	},
-	"files": [
-		"src/SimpleSignal.ts"
-	],
+    "include": [
+        "src"
+    ],
 	"exclude": [
 		"node_modules"
 	]
