--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 		"build": "rimraf dist && rollup -c",
 		"build:declarations": "tsc -d",
 		"test": "jest --testMatch **/test/**/*-test-*.js",
-		"test:coverage": "npm run test -- --coverage",
-		"test:coverage:coveralls": "npm run test -- --coverage --coverageReporters=text-lcov | coveralls",
-		"test:watch": "npm run test -- --watchAll",
+		"test:coverage": "yarn test --coverage",
+		"test:coverage:coveralls": "yarn test --coverage --coverageReporters=text-lcov | coveralls",
+		"test:watch": "yarn test --watchAll",
 		"lint": "tslint -c tslint.json src/*.ts",
-		"prepublish": "npm run build && npm run build:declarations"
+		"prepublish": "yarn build && yarn build:declarations"
 	},
 	"repository": {
 		"type": "git",
