Chore: removed more useless files from npm package

--- a/.npmignore
+++ b/.npmignore
@@ -1,18 +1,18 @@
+_*.bat
+_*.txt
 .babelrc
-.tscache
+.coveralls.yml
+.gitattributes
 .nyc_output
 .travis.yml
-.coveralls.yml
+.tscache
 .vscode
-.gitattributes
+src
+temp
+test
 node_modules
 npm-debug.log
-_*.txt
-_*.bat
-
-/src
-/test
-
+rollup.config.js
 tsconfig.json
 tslint.json
-rollup.config.js
+yarn.lock
