--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test:coverage": "yarn test --coverage",
 		"test:coverage:coveralls": "yarn test --coverage --coverageReporters=text-lcov | coveralls",
 		"test:watch": "yarn test --watchAll",
-		"lint": "tslint -c tslint.json src/*.ts",
+		"lint": "eslint src/**/*.ts",
 		"prepublish": "yarn build && yarn build:declarations"
 	},
 	"repository": {
@@ -39,13 +39,18 @@
 		"@babel/core": "^7.13.8",
 		"@babel/preset-env": "^7.13.9",
 		"@rollup/plugin-typescript": "^2.0.1",
+		"@typescript-eslint/eslint-plugin": "^4.16.1",
+		"@typescript-eslint/parser": "^4.16.1",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-jest": "^24.9.0",
 		"coveralls": "^3.1.0",
+		"eslint": "^7.21.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-prettier": "^3.3.1",
 		"jest": "^24.9.0",
+		"prettier": "^2.2.1",
 		"rimraf": "^3.0.2",
 		"rollup": "^1.27.14",
-		"tslint": "^5.20.1",
 		"typescript": "^3.7.4"
 	}
 }
