--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"module": "./dist/SimpleSignal.es.js",
 	"types": "./dist/SimpleSignal.d.ts",
 	"scripts": {
-		"build": "rimraf dist && rollup -c",
+		"build": "rimraf dist && rollup --config --bundleConfigAsCjs",
 		"build:declarations": "tsc -d",
 		"test": "jest --testMatch **/test/**/*-test-*.js",
 		"test:coverage": "yarn test --coverage",
@@ -36,22 +36,21 @@
 	},
 	"homepage": "https://github.com/zeh/simplesignal#readme",
 	"devDependencies": {
-		"@babel/core": "^7.13.8",
-		"@babel/preset-env": "^7.13.9",
-		"@rollup/plugin-typescript": "^8.2.0",
-		"@typescript-eslint/eslint-plugin": "^4.16.1",
-		"@typescript-eslint/parser": "^4.16.1",
-		"babel-core": "^7.0.0-bridge.0",
-		"babel-jest": "^26.6.3",
-		"coveralls": "^3.1.0",
-		"eslint": "^7.21.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-prettier": "^3.3.1",
-		"jest": "^26.6.3",
-		"prettier": "^2.2.1",
-		"rimraf": "^3.0.2",
-		"rollup": "^2.40.0",
-		"tslib": "^2.1.0",
-		"typescript": "^4.2.2"
+		"@babel/core": "^7.23.9",
+		"@babel/preset-env": "^7.23.9",
+		"@rollup/plugin-typescript": "^11.1.6",
+		"@typescript-eslint/eslint-plugin": "^6.20.0",
+		"@typescript-eslint/parser": "^6.20.0",
+		"babel-jest": "^29.7.0",
+		"coveralls": "^3.1.1",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"jest": "^29.7.0",
+		"prettier": "^3.2.4",
+		"rimraf": "^5.0.5",
+		"rollup": "^4.9.6",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.3"
 	}
 }
