Chore: adding additional config files to npm ignore

--- a/.npmignore
+++ b/.npmignore
@@ -2,17 +2,19 @@ _*.bat
 _*.txt
 .babelrc
 .coveralls.yml
+.eslintrc.js
 .gitattributes
 .nyc_output
 .travis.yml
 .tscache
 .vscode
+node_modules
+npm-debug.log
+prettier.config.js
+rollup.config.js
 src
 temp
 test
-node_modules
-npm-debug.log
-rollup.config.js
 tsconfig.json
 tslint.json
 yarn.lock
